2004-11-06  Aaron W. LaFramboise  <aaronavay62@aaronwl.com>

	PR target/18106
	* lib/target-supports.exp (check_weak_available): Support
	Windows.

2004-11-05  Danny Smith  <dannysmith@users.sourceforge.net>

	* gcc.dg/compat/struct-layout-1_generate.c (main): Generate a
	call to fflush(stdout) before abort.
	(my_ffsll): New function.
	(generate_fields): Use it.

2004-11-05  Joseph S. Myers  <joseph@codesourcery.com>

	* gcc.dg/init-undef-1.c: New test.

2004-11-05  Joseph S. Myers  <joseph@codesourcery.com>

	* gcc.dg/20040910-1.c, gcc.dg/cpp/digraph2.c,
	gcc.dg/cpp/direct2.c, gcc.dg/cpp/direct2s.c,
	gcc.dg/cpp/separate-1.c, gcc.dg/noncompile/951123-1.c,
	gcc.dg/noncompile/971104-1.c, gcc.dg/noncompile/990416-1.c: Adjust
	expected messages for new parser.

2004-11-04  Mark Mitchell  <mark@codesourcery.com>

	* testsuite/g++.dg/ext/visibility/symbian1.C: New test.
	
2004-11-04  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* gcc.dg/pragma-align.c (sixteen): Use 8-byte alignment
	on LP64 targets.

2004-11-04  Joseph S. Myers  <joseph@codesourcery.com>

	* gcc.dg/asm-qual-1.c, gcc.dg/declspec-15.c, gcc.dg/declspec-16.c,
	gcc.dg/declspec-17.c, gcc.dg/empty-source-1.c,
	gcc.dg/empty-source-2.c, gcc.dg/empty-source-3.c,
	gcc.dg/extra-semi-1.c, gcc.dg/extra-semi-2.c,
	gcc.dg/extra-semi-3.c, gcc.dg/gnu-cond-expr-1.c,
	gcc.dg/gnu-cond-expr-2.c, gcc.dg/gnu-cond-expr-3.c,
	gcc.dg/init-empty-1.c, gcc.dg/init-empty-2.c,
	gcc.dg/init-empty-3.c, gcc.dg/noncompile/old-style-parm-1.c,
	gcc.dg/noncompile/old-style-parm-2.c, gcc.dg/stmt-expr-1.c,
	gcc.dg/stmt-expr-2.c, gcc.dg/stmt-expr-3.c: New tests.

2004-11-04  Joseph S. Myers  <joseph@codesourcery.com>

	* gcc.dg/c90-restrict-1.c, gcc.dg/c99-arraydecl-2.c,
	gcc.dg/c99-func-2.c, gcc.dg/charset/asm2.c, gcc.dg/concat.c,
	gcc.dg/cpp/19990413-1.c, gcc.dg/cpp/paste4.c,
	gcc.dg/init-desig-obs-1.c, gcc.dg/noncompile/920721-2.c,
	gcc.dg/noncompile/930622-2.c, gcc.dg/noncompile/940112-1.c,
	gcc.dg/noncompile/950921-1.c, gcc.dg/switch-2.c,