@@ -1,3 +1,8 @@
+2004-11-06  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	PR rtl-optimization/17933
+	* gcc.dg/torture/pr17933-1.c: New test.
+
 2004-11-06  Aaron W. LaFramboise  <aaronavay62@aaronwl.com>
 
 	PR target/18106
